--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -34,7 +34,7 @@ label {
 }
 
 body {
- background-color:FFFFCC;
+ background-image: url("https://s-media-cache-ak0.pinimg.com/originals/ba/d3/1a/bad31a04940c9ec5b88b2a5c502a7cae.jpg");
 background-repeat:no-repeat;
 background-size:cover;
 background-attachment: fixed;
